monitor: Add g_drive_is_removable() support

Nautilus wants to show entries in the sidebar only for removable devices.
It uses currently sort of conditions to determine which devices should be
shown. Those condition fails in some cases unfortunatelly. Lets provide
g_drive_is_removable() which uses udisks Removable property to determine
which devices should be shown. It should return true for all drives with
removable media, or flash media, or drives on usb and firewire buses.

Add support for this property also in gvfs-mount tool.

Bump GLib version accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=765457